# cifcombo

./: .gitignore  README.rst  core.py  pyproject.toml  setup.cfg
.github/workflows/: cifcomb-deploy-test.yml  cifcomb-deploy.yml  cifcomb-pytest.yml  cifcombo-deploy-test.yml  cifcombo-deploy.yml
cifcomb/: const.py  core.py  helper.py
cifcomb/cifs/: cifs
cifcombo/: const.py  core.py  helper.py
examples/: README.md
tests/: helper.py  test_core.py
