[metadata]
name = cifcombo
author = Kosuke Nakano
author_email = kousuke_1123@icloud.com
long_description = file: README.rst
url = https://github.com/kousuke-nakano/cifcombo
project_urls =
    Bug tracker = https://github.com/kousuke-nakano/cifcombo/issues
    Documentations = https://kousuke-nakano.readthedocs.io/en/latest/
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics

[options]
packages = cifcombo
python_requires = >=3.7.2
install_requires =
    numpy >= 1.17
    pymatgen >= 2019.1.13
    sympy >= 1.5.1
    tqdm >= 4.60.0
    pytest >= 3.0.0
    setuptools_scm >= 7.0.5
    joblib >= 1.2.0    

[options.entry_points]
console_scripts =
    cifcombo = cifcombo.helper:main
